5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk
  namespace: splunk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: splunk.webdiscode.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk
            port:
              number: 8000
